# esphome-rpipicow-booknook

./: README.md  booknook-esp32-shakespeare.yaml  booknook.yaml  model-esp32-cafe.yaml  model-esp32c3-baking.yaml  model-esp32c3-cafe.yaml  model-esp32c3-disneycastle.yaml  model-esp32c3-pet-shop.yaml  pyproject.toml
